--- a/toastdialog/src/main/res/layout/toast_dialog_loading.xml
+++ b/toastdialog/src/main/res/layout/toast_dialog_loading.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_toast_dialog_action"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="20dp">
 
-    <LinearLayout
+    <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/bg_toast_dialog_action"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:indeterminate="true" />
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="true" />
+    <TextView
+        android:id="@+id/tv_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="加载中"
+        android:textColor="@color/toast_dialog_text"
+        android:textSize="14sp" />
+</LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="加载中"
-            android:textColor="@color/toast_dialog_text"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-</FrameLayout>
