--- a/toastdialog/src/main/res/layout/toast_dialog_progress.xml
+++ b/toastdialog/src/main/res/layout/toast_dialog_progress.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-    <LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:background="@drawable/bg_toast_dialog_action"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="20dp">
+
+    <ProgressBar
+        android:id="@+id/m_progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/bg_toast_dialog_action"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="20dp">
-
-        <ProgressBar
-            android:id="@+id/m_progress_bar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tv_msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="进度"
-            android:textColor="@color/toast_dialog_text"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-</FrameLayout>
+        android:layout_marginTop="4dp"
+        android:text="进度"
+        android:textColor="@color/toast_dialog_text"
+        android:textSize="14sp" />
+</LinearLayout>
