--- a/toastdialog/src/main/res/layout/toast_dialog_action.xml
+++ b/toastdialog/src/main/res/layout/toast_dialog_action.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="8dp"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
     android:paddingTop="8dp"
     android:background="@drawable/bg_toast_dialog_action">
 
