--- a/toastdialog/src/main/res/layout/toast_dialog_loading.xml
+++ b/toastdialog/src/main/res/layout/toast_dialog_loading.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<LinearLayout
     android:layout_width="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_height="wrap_content"
@@ -22,4 +25,4 @@
         android:textColor="@color/toast_dialog_text"
         android:textSize="14sp" />
 </LinearLayout>
-
+</FrameLayout>
